--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ cryptography = "==3.4.6"
 firebase = "==3.0.1"
 gcloud = "==0.18.3"
 googleapis-common-protos = "==1.52.0"
+gunicorn = "==20.0.4"
 httplib2 = "==0.19.0"
 idna = "==2.10"
 install = "==1.3.4"
