--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
+appdirs==1.4.4
 certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
 click==7.1.2
 cryptography==3.4.6
+distlib==0.3.1
+filelock==3.0.12
 firebase==3.0.1
 Flask==1.1.2
 gcloud==0.18.3
 googleapis-common-protos==1.52.0
+gunicorn==20.0.4
 httplib2==0.19.0
 idna==2.10
 install==1.3.4
@@ -16,6 +20,7 @@ jwcrypto==0.8
 MarkupSafe==1.1.1
 Naked==0.1.31
 oauth2client==4.1.3
+pipenv==2020.11.15
 protobuf==3.15.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -31,4 +36,6 @@ shellescape==3.8.1
 six==1.15.0
 sseclient==0.0.27
 urllib3==1.26.3
+virtualenv==20.4.2
+virtualenv-clone==0.5.4
 Werkzeug==1.0.1
